# ray-unsloth

./: .gitignore  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
configs/: example.yaml  fake_workflow.yaml  lfm2_5_1_2b_1x_l4_multitenant.yaml  lfm2_5_1_2b_1x_l4_multitenant_rl.yaml  overfit_smoke_test.yaml  qwen3_5_4b_1x_a100_multitenant.yaml  qwen3_5_4b_1x_a100_multitenant_rl.yaml  qwen3_5_4b_1x_l4.yaml  qwen3_5_4b_ruler_64k.yaml  qwen3_5_9b_2x_l4_sharded.yaml
docusaurus-docs/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus-docs/docs/: architecture.md  compare-tinker.md  configuration.md  intro.md  quickstart.md  tech-stack.md
docusaurus-docs/docs/api/: losses.md  rest-client.md  sampling-client.md  service-client.md  training-client.md  types.md
docusaurus-docs/docs/guides/: checkpoints.md  control-plane.md  examples.md  extending.md  rl.md  runtimes.md  sft.md  testing.md
docusaurus-docs/docs/project/: current-status.md  roadmap.md  work-in-progress.md
docusaurus-docs/src/css/: custom.css
docusaurus-docs/src/theme/: mermaidTheme.js
docusaurus-docs/src/theme/Mermaid/: index.js
examples/: _tinker_helpers.py  lfm2_5_1_2b_multitenant_rl.py  lfm2_5_1_2b_multitenant_sft.py  overfit_smoke_test.py  qwen3_5_4b_math_dataset_rl_training.py  qwen3_5_4b_multitenant_rl.py  qwen3_5_4b_multitenant_sft.py  qwen3_5_4b_ruler_64k_rl_training.py  qwen3_5_9b_math_dataset_rl_training.py  qwen3_5_9b_rl_training.py  sft_loop.py  tinker_first_rl_training.py  tinker_first_sft_training.py
examples/gallery/01-hello-sft/: README.md  config.yaml  run.py
examples/gallery/02-hello-rl/: README.md  config.yaml  run.py
examples/sample_plugin/: __init__.py
src/ray_unsloth/: __init__.py  apps.py  checkpoints.py  cli.py  config.py  download.py  errors.py  losses.py  plugins.py  recording.py  schema.py  store.py  types.py
src/ray_unsloth/clients/: __init__.py  _kwargs.py  _remote.py  rest.py  sampling.py  service.py  training.py
src/ray_unsloth/evals/: __init__.py  runner.py  scorers.py
src/ray_unsloth/export/: __init__.py  base.py
src/ray_unsloth/providers/: __init__.py  base.py  fake.py  local_ray.py  modal_provider.py  planned.py
src/ray_unsloth/recipes/: __init__.py  advantages.py  datasets.py  grpo.py  renderers.py  rewards.py  rollouts.py  sft.py
src/ray_unsloth/runtime/: _resolve.py
src/ray_unsloth/types/: __init__.py  checkpoints.py  futures.py  inputs.py  outputs.py
src/ray_unsloth/ui/: __init__.py  server.py
src/ray_unsloth_apps/: __init__.py
src/ray_unsloth_apps/scribe/: __init__.py  classifier.py  cli.py  ingest.py  pipeline.py  profile.py  prompts.py  rewrite.py
src/tinker/: __init__.py  _exceptions.py  types.py
src/tinker/lib/: __init__.py  public_interfaces.py
tests/: conftest.py  fakes.py  test_apps_framework.py  test_cli_devex.py  test_clients.py  test_config_checkpoints.py  test_deprecations.py  test_distributed_trainer.py  test_download.py  test_engine_sampling.py  test_kwargs_warnings.py  test_lfm2_5_1_2b_multitenant_rl.py  test_lfm2_5_1_2b_multitenant_sft.py  test_overfit_smoke_helpers.py  test_platform_workflows.py  test_qwen3_5_4b_math_dataset_rl_training.py  test_qwen3_5_4b_multitenant_rl.py  test_qwen3_5_4b_multitenant_sft.py  test_qwen3_5_4b_ruler_64k_rl_training.py  test_qwen3_5_9b_math_dataset_rl_training.py  test_qwen3_5_9b_rl_training.py  test_recipes.py  test_scribe.py  test_scribe_rewrite.py  test_tinker_first_rl_training.py  test_tinker_first_sft_training.py  test_types.py
(+20 files in other folders)
