[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-unsloth"
version = "0.1.0"
description = "Tinker-compatible primitives backed by Ray orchestration and Unsloth GPU actors."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "ray>=2.55.1",
  "pyyaml>=6.0.3",
  "torch>=2.10.0,<2.11.0",
  "transformers>=5.5.0,<5.5.1",
  "bitsandbytes>=0.49.2",
]

[project.optional-dependencies]
unsloth = [
  "unsloth>=2026.4.8",
  "unsloth-zoo>=2026.4.9",
]
modal = [
  "modal>=1.4.2",
]
dev = [
  "pytest>=9.0.3",
]
examples = [
  "datasets>=4.0.0",
  "sympy>=1.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
