[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-unsloth"
version = "0.1.0"
description = "Tinker-compatible primitives backed by Ray orchestration and Unsloth GPU actors."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "ray>=2.55.1",
  "pyyaml>=6.0.3",
  "torch>=2.10.0,<2.11.0",
  "transformers>=5.5.0,<5.5.1",
  "bitsandbytes>=0.49.2",
]

[project.optional-dependencies]
unsloth = [
  "unsloth>=2026.5.2",
  "unsloth-zoo>=2026.5.1",
]
modal = [
  "modal>=1.4.2",
]
ui = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
dev = [
  "pytest>=9.0.3",
]
examples = [
  "datasets>=4.0.0",
  "sympy>=1.14.0",
  "wandb>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ray_unsloth = ["py.typed", "ui/static/**"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line length is governed by `ruff format`; leftovers are long strings/URLs
  "RUF001", # em-dashes in user-facing messages are intentional
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "ray_unsloth.plugins",
  "ray_unsloth.store",
  "ray_unsloth.losses",
  "ray_unsloth.recording",
  "ray_unsloth.errors",
  "ray_unsloth.evals.*",
  "ray_unsloth.export.*",
  "ray_unsloth.providers.*",
]
strict = true
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "ray_unsloth.runtime.*",
  "ray_unsloth.clients.*",
  "ray_unsloth.types",
  "ray_unsloth.config",
  "ray_unsloth.checkpoints",
  "ray_unsloth.download",
  "ray_unsloth.cli",
  "ray_unsloth.ui.*",
  "tinker.*",
]
ignore_errors = true

[project.scripts]
ray-unsloth = "ray_unsloth.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
